.2 HTML index complete

--- a/index.html
+++ b/index.html
@@ -19,16 +19,62 @@
                 <a href="#">About us</a>
                 <a href="#">Contact</a>
             </div>
+        </nav>
 
-            <div class="ctr-cont1">
-                <div class="intro-cta">
-                    <h1>This website is awesome</h1>
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
-                    </p>
-                    <button class="btn">Sign up</button>
+        <div class="ctr-cont1">
+            <div class="intro-cta">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                </p>
+                <button class="btn">Sign up</button>
+            </div>
+            <div class="intro-banner">
+                <img src="img/lr-defnder.jpg" alt="Land Rover Defender">
+            </div>
+        </div>
+
+        <div class="ctr-cont2">
+            <h2>Some favorites</h2>
+            <div class="fav-content">
+                <div>
+                    <img src="img/911-front.jpg" alt="Porsche 911 front">
+                    <p>Porsche 911</p>
+                </div>
+                <div>
+                    <img src="img/classic-mustang.jpg" alt="Classic mustang">
+                    <p>Ford Mustang</p>
+                </div>
+                <div>
+                    <img src="img/fiat-classic.jpg" alt="Fiat 500">
+                    <p>Fiat 500</p>
+                </div>
+                <div>
+                    <img src="img/porsche-930-rear.jpg" alt="Porsche 930">
+                    <p>Porsche 930 Turbo</p>
                 </div>
             </div>
-        </nav>
+        </div>
+
+        <div class="ctr-cont3">
+            <p>
+                “Ka-Chow!”
+            </p>
+            <b>
+                - Lightning McQueen
+            </b>
+        </div>
+        <div class="ctr-signup">
+            <div class="signup-text">
+                <b>Join our community!</b>
+                <p>Browse through great shots and information on the most iconic classics.</p>
+            </div>
+            <div class="signup-btn">
+                <button type="button">Sign up</button>
+            </div>
+        </div>
+        <div class="ctr-footer">
+            <p>Copyright © Created in Arg </p>
+        </div>
     </div>
 </body>
 </html>
