HTML and CSS v1 full - complete

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing-Page TOP</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -64,11 +65,11 @@
             </b>
         </div>
         <div class="ctr-signup">
-            <div class="signup-text">
-                <b>Join our community!</b>
+            <div class="sign-item signup-text">
+                <h3>Join our community!</h3>
                 <p>Browse through great shots and information on the most iconic classics.</p>
             </div>
-            <div class="signup-btn">
+            <div class="sign-item signup-btn">
                 <button type="button">Sign up</button>
             </div>
         </div>
